--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "code-runner.executorMap": {
-      "typescript": "npx ts-node",
-    }
-  }
-  
+        "typescript": "npx ts-node",
+        "csharp": "dotnet-script",
+      }
+}
