--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "code-runner.executorMap": {
-        "typescript": "npx ts-node",
-        "csharp": "dotnet-script",
-      }
-}
+      "typescript": "npx ts-node",
+    },
+    "code-runner.executorMapByGlob": {
+      "*.cs": "dotnet run",
+      "*.csx": "dotnet tool run dotnet-script"
+    },
+  }
+  
