--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,34 +1,30 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "ts-node",
-            "type": "node",
-            "request": "launch",
-            "args": [
-                "${relativeFile}"
-            ],
-            "runtimeArgs": [
-                "-r",
-                "ts-node/register"
-            ],
-            "cwd": "${workspaceRoot}",
-            "internalConsoleOptions": "openOnSessionStart"
-        },
-        {
-            "name": ".NET Script Debug",
-            "type": "coreclr",
-            "request": "launch",
-            "program": "${env:HOME}/.dotnet/tools/dotnet-script",
-            "args": ["${file}"],
-            "windows": {
-              "program": "${env:USERPROFILE}/.dotnet/tools/dotnet-script.exe",
-            },
-            "cwd": "${workspaceFolder}",
-            "stopAtEntry": false,
-          }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "ts-node",
+      "type": "node",
+      "request": "launch",
+      "args": ["${relativeFile}"],
+      "runtimeArgs": ["-r", "ts-node/register"],
+      "cwd": "${workspaceRoot}",
+      "internalConsoleOptions": "openOnSessionStart"
+    },
+    {
+      "name": ".NET Script Debug",
+      "type": "coreclr",
+      "request": "launch",
+      "program": "dotnet",
+      "args": [
+        "exec",
+        "${env:HOME}/.nuget/packages/dotnet-script/1.5.0/tools/net8.0/any/dotnet-script.dll",
+        "${file}"
+      ],
+      "cwd": "${workspaceRoot}",
+      "stopAtEntry": false
+    }
+  ]
 }
