--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,37 @@
 {
-<<<<<<< Updated upstream
   // Use IntelliSense to learn about possible attributes.
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    {
+      "type": "java",
+      "name": "app2",
+      "request": "launch",
+      "mainClass": "parameter_object_and_result_object_pattern.mix_exercises.demo1.app2",
+      "projectName": "design_patterns_5c56568f"
+    },
+    {
+      "type": "java",
+      "name": "app1",
+      "request": "launch",
+      "mainClass": "parameter_object_and_result_object_pattern.mix_exercises.demo1.app1",
+      "projectName": "design_patterns_5c56568f"
+    },
+    {
+      "type": "java",
+      "name": "app1",
+      "request": "launch",
+      "mainClass": "mix_exercises.demo1.app1",
+      "projectName": "design_patterns_5c56568f"
+    },
+    {
+      "type": "java",
+      "name": "app1",
+      "request": "launch",
+      "mainClass": "app1",
+      "projectName": "design_patterns_5c56568f"
+    },
     {
       "name": "ts-node",
       "type": "node",
@@ -18,79 +45,13 @@
       "name": ".NET Script Debug",
       "type": "coreclr",
       "request": "launch",
-      "program": "dotnet",
-      "args": [
-        "exec",
-        "${env:HOME}/.nuget/packages/dotnet-script/1.5.0/tools/net8.0/any/dotnet-script.dll",
-        "${file}"
-      ],
-      "cwd": "${workspaceRoot}",
+      "program": "${env:HOME}/.dotnet/tools/dotnet-script",
+      "args": ["${file}"],
+      "windows": {
+        "program": "${env:USERPROFILE}/.dotnet/tools/dotnet-script.exe"
+      },
+      "cwd": "${workspaceFolder}",
       "stopAtEntry": false
     }
   ]
 }
-=======
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "java",
-            "name": "app2",
-            "request": "launch",
-            "mainClass": "parameter_object_and_result_object_pattern.mix_exercises.demo1.app2",
-            "projectName": "design_patterns_5c56568f"
-        },
-        {
-            "type": "java",
-            "name": "app1",
-            "request": "launch",
-            "mainClass": "parameter_object_and_result_object_pattern.mix_exercises.demo1.app1",
-            "projectName": "design_patterns_5c56568f"
-        },
-        {
-            "type": "java",
-            "name": "app1",
-            "request": "launch",
-            "mainClass": "mix_exercises.demo1.app1",
-            "projectName": "design_patterns_5c56568f"
-        },
-        {
-            "type": "java",
-            "name": "app1",
-            "request": "launch",
-            "mainClass": "app1",
-            "projectName": "design_patterns_5c56568f"
-        },
-        {
-            "name": "ts-node",
-            "type": "node",
-            "request": "launch",
-            "args": [
-                "${relativeFile}"
-            ],
-            "runtimeArgs": [
-                "-r",
-                "ts-node/register"
-            ],
-            "cwd": "${workspaceRoot}",
-            "internalConsoleOptions": "openOnSessionStart"
-        },
-        {
-            "name": ".NET Script Debug",
-            "type": "coreclr",
-            "request": "launch",
-            "program": "${env:HOME}/.dotnet/tools/dotnet-script",
-            "args": [
-                "${file}"
-            ],
-            "windows": {
-                "program": "${env:USERPROFILE}/.dotnet/tools/dotnet-script.exe"
-            },
-            "cwd": "${workspaceFolder}",
-            "stopAtEntry": false
-        }
-    ]
-}
->>>>>>> Stashed changes
