python project folders are added in workspace folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,8 +17,6 @@
     }
   ],
   "java.debug.settings.vmArgs": "--enable-preview",
-  "java.project.sourcePaths": [
-    "."
-  ],
-  "java.project.referencedLibraries": []
+  "java.project.sourcePaths": ["."],
+  "java.project.referencedLibraries": [],
 }
