--- a/mix_exercises/demo3/fast_api_demo3/.vscode/settings.json
+++ b/mix_exercises/demo3/fast_api_demo3/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
+  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+  "python.testing.pytestArgs": [
+    "."
+  ],
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true
 }
