--- a/mix_exercises/demo3/fast_api_demo3/pyproject.toml
+++ b/mix_exercises/demo3/fast_api_demo3/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = {extras = ["email"], version = "^2.9.2"}
 
 [tool.poetry.group.dev.dependencies]
 uvicorn = "^0.30.6"
+pytest = "^8.3.3"
 
 [build-system]
 requires = ["poetry-core"]
